turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:17: error: illegal start of simple expression
var rule:Array[Array[Array[Int]]] = [T],[U]
                                    ^